verif/test/deca/syntax/invalid/invalid-multiple-declarations-verif.res
src/test/deca/syntax/invalid/invalid-multiple-declarations.deca:11:33: no viable alternative at input 'int'
